syntax = "proto3";
package example; 

service ExampleService {
    rpc Example(ExampleRequest) returns (ExampleResponse);
}

message ExampleRequest {
    string name = 1;
}

message ExampleResponse {
    string name = 1;
}